--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.15.0",
+    "@tailwindcss/vite": "^4.1.12",
     "nuxt": "^3.18.1",
+    "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
+    "@iconify-json/tabler": "^1.2.22",
     "@nuxt/eslint": "^1.9.0",
+    "daisyui": "^5.0.50",
     "eslint": "^9.33.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
