--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.15.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.12",
     "nuxt": "^3.18.1",
     "tailwindcss": "^4.1.12",
