--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"npm run dev:db\" \"nuxt dev\"",
+    "dev:db": "wsl -e bash -c \"export PATH=\\\"/home/$(whoami)/.turso:\\$PATH\\\" && turso dev --db-file local.db\"",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,9 +14,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.12",
     "@nuxt/icon": "^1.15.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.12",
+    "concurrently": "^9.2.0",
+    "drizzle-orm": "^0.44.4",
     "nuxt": "^3.18.1",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
@@ -27,6 +31,7 @@
     "@iconify-json/tabler": "^1.2.22",
     "@nuxt/eslint": "^1.9.0",
     "daisyui": "^5.0.50",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
