--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.12",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/zod": "^4.15.1",
     "better-auth": "^1.3.7",
     "concurrently": "^9.2.0",
     "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.3",
     "nuxt": "^3.18.1",
+    "nuxt-csurf": "^1.6.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.12",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "zod": "^4.0.17"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
@@ -38,7 +43,7 @@
     "eslint": "^9.33.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "typescript": "^5.9.2"
+    "vue-tsc": "^3.0.6"
   },
   "lint-staged": {
     "*": "npm run lint"
