--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "concurrently": "^9.2.0",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.3",
+    "nanoid": "^5.1.5",
     "nuxt": "^3.18.1",
     "nuxt-csurf": "^1.6.5",
     "pinia": "^3.0.3",
+    "slug": "^11.0.0",
     "tailwindcss": "^4.1.12",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
@@ -38,6 +40,7 @@
     "@antfu/eslint-config": "^5.2.1",
     "@iconify-json/tabler": "^1.2.22",
     "@nuxt/eslint": "^1.9.0",
+    "@types/slug": "^5.0.9",
     "daisyui": "^5.0.50",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
