--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nanoid": "^5.1.5",
     "nuxt": "^3.18.1",
     "nuxt-csurf": "^1.6.5",
+    "nuxt-maplibre": "^1.1.1",
     "pinia": "^3.0.3",
     "slug": "^11.0.0",
     "tailwindcss": "^4.1.12",
