--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.888.0",
+    "@aws-sdk/s3-presigned-post": "^3.888.0",
     "@libsql/client": "^0.15.12",
     "@nuxt/icon": "^1.15.0",
     "@nuxtjs/color-mode": "^3.5.2",
@@ -24,8 +26,8 @@
     "@vee-validate/zod": "^4.15.1",
     "better-auth": "^1.3.7",
     "concurrently": "^9.2.0",
-    "drizzle-orm": "^0.44.4",
-    "drizzle-zod": "^0.8.3",
+    "drizzle-orm": "^0.40.1",
+    "drizzle-zod": "^0.7.0",
     "maplibre-gl": "^5.7.0",
     "nanoid": "^5.1.5",
     "nuxt": "^3.18.1",
@@ -37,7 +39,7 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "zod": "^4.1.5"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
@@ -45,7 +47,7 @@
     "@nuxt/eslint": "^1.9.0",
     "@types/slug": "^5.0.9",
     "daisyui": "^5.0.50",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9.33.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
